Rock Paper Scissors

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body{
   background:url(https://i.pinimg.com/originals/81/32/96/813296022908d0d4adaa55a4eaf5207a.gif) no-repeat center center fixed;
-  background-size:cover;   
+  background-size:cover; 
+  overflow-x:hidden ;  
 }
 .App {
   text-align: center;
