--- a/src/Routes/RockPaperScissors/index.scss
+++ b/src/Routes/RockPaperScissors/index.scss
@@ -9,7 +9,6 @@
   padding: 0 20px;
 }
 
-
 @media screen and (max-width: 700px) {
   footer {
     .footer__message {
@@ -77,7 +76,6 @@
     }
   }
 }
-
 
 .home {
   width: 100%;
@@ -177,7 +175,6 @@
   }
 }
 
-
 .modal-wrapper {
   position: absolute;
   height: 100vh;
@@ -272,7 +269,6 @@ button {
       margin: 20px 0px;
       text-align: center;
       color: darkolivegreen;
-
     }
 
     &.result__mobile {
@@ -332,6 +328,9 @@ button {
       display: flex;
       align-items: center;
       justify-content: center;
+      .pick-counter {
+        color: yellowgreen;
+      }
 
       &.pick__scissors {
         @include play-item($scissors-color);
