--- a/src/Routes/Quotes/index.scss
+++ b/src/Routes/Quotes/index.scss
@@ -1,15 +1,7 @@
 #generate-btn {
   color: white !important;
-  background: #64b6ac !important;
-  border-color: #64b6ac !important;
   cursor: pointer;
-  font-size: 1.5rem;
-  padding: 0.5rem 1rem;
-}
-#generate-btn:hover {
-  background: #b09e99 !important;
-  border-color: #b09e99 !important;
-  color: #333333 !important;
+  padding: 0.5rem 15rem;
 }
 
 #quote {
@@ -157,10 +149,16 @@
 }
 
 .text-muted {
-  // display: flex;
   flex-direction: row;
 }
 
 .quote-icon {
   align-items: flex-start;
+}
+
+.btn-outline-primary {
+  color: #007bff;
+  background-color: transparent;
+  background-image: none;
+  border-color: #007bff;
 }
